--- a/packages/redis-client/package.json
+++ b/packages/redis-client/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "@SwiftTrack/redis-client",
+  "name": "@swifttrack/redis-client",
   "version": "0.0.1",
   "main": "dist/index.js",
-  "description": "redis-client private package for SwiftTrack",
+  "description": "redis-client private package for swifttrack",
   "private": true,
   "scripts": {
     "build": "tsc",
     "build:pack": "tsc && npm pack"
   },
   "dependencies": {
-    "@SwiftTrack/logger": "../logger",
+    "@swifttrack/logger": "../logger",
     "ioredis": "^5.6.1"
   },
   "license": "MIT",
-  "author": "SwiftTrack",
+  "author": "swifttrack",
   "devDependencies": {
     "@types/node": "^22.13.13",
     "typescript": "^5.8.2"
