--- a/packages/kafka-client/package.json
+++ b/packages/kafka-client/package.json
@@ -1,7 +1,9 @@
 {
   "name": "@swifttrack/kafka-client",
   "version": "0.0.1",
+  "type": "module",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "description": "kafka-client private package for swifttrack",
   "private": true,
   "scripts": {
