COre functionalities tested.

--- a/services/order-service/package.json
+++ b/services/order-service/package.json
@@ -3,6 +3,7 @@
   "type": "module",
   "dependencies": {
     "@swifttrack/logger": "../../packages/logger",
+    "@swifttrack/database": "../../packages/database",
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
