--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,25 @@ services:
       - "9092:9092"
     restart: unless-stopped
 
+  postgres:
+    image: postgres:15-alpine
+    environment:
+      POSTGRES_DB: swifttrack
+      POSTGRES_USER: swifttrack_user
+      POSTGRES_PASSWORD: swifttrack_pass
+      POSTGRES_INITDB_ARGS: "--encoding=UTF8 --locale=C"
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+      - ./database/init:/docker-entrypoint-initdb.d
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U swifttrack_user -d swifttrack"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+
   driver-service:
     build:
       context: ./services/driver-service
@@ -28,6 +47,13 @@ services:
       - "4001:4001"
     environment:
       - KAFKA_BROKER=redpanda:9092
+      - DATABASE_URL=postgresql://swifttrack_user:swifttrack_pass@postgres:5432/swifttrack
     depends_on:
-      - redpanda
+      postgres:
+        condition: service_healthy
+      redpanda:
+        condition: service_started
     restart: unless-stopped
+
+volumes:
+  postgres_data:
