--- a/services/driver-service/package.json
+++ b/services/driver-service/package.json
@@ -16,9 +16,11 @@
     "route-optimization"
   ],
   "dependencies": {
+    "@swifttrack/database": "../../packages/database",
     "@swifttrack/kafka-client": "../../packages/kafka-client",
     "@swifttrack/logger": "../../packages/logger",
     "axios": "^1.6.0",
+    "dotenv": "^17.2.2",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.10",
