--- a/services/order-service/package.json
+++ b/services/order-service/package.json
@@ -2,12 +2,14 @@
   "name": "order-service",
   "type": "module",
   "dependencies": {
-    "@swifttrack/logger": "../../packages/logger",
     "@swifttrack/database": "../../packages/database",
+    "@swifttrack/logger": "../../packages/logger",
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "http": "^0.0.1-security",
     "kafkajs": "^2.2.4",
+    "node-fetch": "^3.3.2",
     "nodemon": "^3.1.10"
   },
   "scripts": {
