--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3.8"
 services:
   redpanda:
     image: docker.redpanda.com/redpandadata/redpanda:latest
@@ -46,13 +45,16 @@ services:
   # Core Services
   order-service:
     build:
-      context: ./services/order-service
+      context: .
       dockerfile_inline: |
         FROM node:18-alpine
         WORKDIR /app
-        COPY package*.json ./
+        # Copy packages first
+        COPY packages/ ./packages/
+        # Copy service files
+        COPY services/order-service/package*.json ./
         RUN npm install
-        COPY . .
+        COPY services/order-service/ ./
         EXPOSE 4000
         CMD ["npm", "start"]
     ports:
@@ -89,13 +91,16 @@ services:
 
   driver-service:
     build:
-      context: ./services/driver-service
+      context: .
       dockerfile_inline: |
         FROM node:18-alpine
         WORKDIR /app
-        COPY package*.json ./
+        # Copy packages first
+        COPY packages/ ./packages/
+        # Copy service files
+        COPY services/driver-service/package*.json ./
         RUN npm install
-        COPY . .
+        COPY services/driver-service/ ./
         EXPOSE 4001
         CMD ["npm", "start"]
     ports:
@@ -130,13 +135,16 @@ services:
 
   notification-service:
     build:
-      context: ./services/notification-service
+      context: .
       dockerfile_inline: |
         FROM node:18-alpine
         WORKDIR /app
-        COPY package*.json ./
+        # Copy packages first
+        COPY packages/ ./packages/
+        # Copy service files
+        COPY services/notification-service/package*.json ./
         RUN npm install
-        COPY . .
+        COPY services/notification-service/ ./
         EXPOSE 4002
         CMD ["npm", "start"]
     ports:
@@ -175,14 +183,6 @@ services:
   cms-mock:
     build:
       context: ./services/cms-mock
-      dockerfile_inline: |
-        FROM node:18-alpine
-        WORKDIR /app
-        COPY package*.json ./
-        RUN npm install
-        COPY . .
-        EXPOSE 5001
-        CMD ["npm", "start"]
     ports:
       - "5001:5001"
     environment:
@@ -206,14 +206,6 @@ services:
   wms-mock:
     build:
       context: ./services/wms-mock
-      dockerfile_inline: |
-        FROM node:18-alpine
-        WORKDIR /app
-        COPY package*.json ./
-        RUN npm install
-        COPY . .
-        EXPOSE 5002
-        CMD ["npm", "start"]
     ports:
       - "5002:5002"
     environment:
@@ -239,14 +231,6 @@ services:
   ros-mock:
     build:
       context: ./services/ros-mock
-      dockerfile_inline: |
-        FROM node:18-alpine
-        WORKDIR /app
-        COPY package*.json ./
-        RUN npm install
-        COPY . .
-        EXPOSE 5003
-        CMD ["npm", "start"]
     ports:
       - "5003:5003"
     environment:
